test/Fail/Issue4012.err
Issue4012.agda:27.8-12: error: [UnequalTerms]
The terms
  f
and
  g
are not equal at type D
when checking that the expression refl has type f ≡ g
